logs/dag_id=Demo/run_id=manual__2022-08-02T110002.892737+0000/task_id=records_saving/attempt=1.log
[2022-08-02 11:00:18,246] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: Demo.records_saving manual__2022-08-02T11:00:02.892737+00:00 [queued]>
[2022-08-02 11:00:18,257] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: Demo.records_saving manual__2022-08-02T11:00:02.892737+00:00 [queued]>
[2022-08-02 11:00:18,258] {taskinstance.py:1376} INFO - 
--------------------------------------------------------------------------------
[2022-08-02 11:00:18,258] {taskinstance.py:1377} INFO - Starting attempt 1 of 1
[2022-08-02 11:00:18,259] {taskinstance.py:1378} INFO - 
--------------------------------------------------------------------------------
[2022-08-02 11:00:18,277] {taskinstance.py:1397} INFO - Executing <Task(PythonOperator): records_saving> on 2022-08-02 11:00:02.892737+00:00
[2022-08-02 11:00:18,282] {standard_task_runner.py:52} INFO - Started process 6839 to run task
[2022-08-02 11:00:18,285] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'Demo', 'records_saving', 'manual__2022-08-02T11:00:02.892737+00:00', '--job-id', '287', '--raw', '--subdir', 'DAGS_FOLDER/demo.py', '--cfg-path', '/tmp/tmprikpnr05', '--error-file', '/tmp/tmpaexd78dd']
[2022-08-02 11:00:18,285] {standard_task_runner.py:80} INFO - Job 287: Subtask records_saving
[2022-08-02 11:00:18,353] {task_command.py:371} INFO - Running <TaskInstance: Demo.records_saving manual__2022-08-02T11:00:02.892737+00:00 [running]> on host 31353b71d6cb
[2022-08-02 11:00:18,432] {taskinstance.py:1591} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=Demo
AIRFLOW_CTX_TASK_ID=records_saving
AIRFLOW_CTX_EXECUTION_DATE=2022-08-02T11:00:02.892737+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-08-02T11:00:02.892737+00:00
[2022-08-02 11:00:18,449] {logging_mixin.py:115} INFO - ['file_1', 'file_2', 'file_3']
[2022-08-02 11:00:18,460] {base.py:68} INFO - Using connection ID 'postgres_demo' for task execution.
[2022-08-02 11:00:18,509] {dbapi.py:231} INFO - Running statement: CREATE TABLE IF NOT EXISTS public."Files"
                            (
                                id integer NOT NULL,
                                name varchar(50) NOT NULL,
                                CONSTRAINT "Files_pkey" PRIMARY KEY (id)
                            ), parameters: None
[2022-08-02 11:00:18,530] {base.py:68} INFO - Using connection ID 'postgres_demo' for task execution.
[2022-08-02 11:00:18,534] {dbapi.py:231} INFO - Running statement: INSERT INTO public."Files"(
                                id,name,)
                                VALUES(1,'file_1');, parameters: None
[2022-08-02 11:00:18,536] {taskinstance.py:1909} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 171, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 189, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/demo.py", line 63, in save_records
    postgres_hook.run(sql)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 211, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 235, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 2:                                 id,name,)
                                                ^

[2022-08-02 11:00:18,551] {taskinstance.py:1420} INFO - Marking task as FAILED. dag_id=Demo, task_id=records_saving, execution_date=20220802T110002, start_date=20220802T110018, end_date=20220802T110018
[2022-08-02 11:00:18,568] {standard_task_runner.py:97} ERROR - Failed to execute job 287 for task records_saving (syntax error at or near ")"
LINE 2:                                 id,name,)
                                                ^
; 6839)
[2022-08-02 11:00:18,578] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-08-02 11:00:18,631] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
